# fancy-projects

./: .gitmodules  README.md
fancy-old/: pyproject.toml  setup.py
